Remove "min-width:0" - fixes unwanted horizontal scrollbar in message headers box

--- a/skins/larry/mail.css
+++ b/skins/larry/mail.css
@@ -1084,7 +1084,6 @@ div.hide-headers {
 }
 
 #messageheader .pagenav .countdisplay {
-	min-width: 0;
 	padding-right: 0.5em;
 	white-space: nowrap;
 }
